# brute

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: my_benchmark.rs
src/: main.rs
