[package]
name = "brute"
version = "0.1.1"
authors = ["Lepuroid <lepuroid@gmail.com>"]
edition = "2021"
description = "sha256 bruteforce utility. Usage of the utility is allowed for research purposes only."
licence = "MIT license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
sha2 = "0.10.2"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "my_benchmark"
harness = false